# guantlet-clip_forge-24hr-mvp

./: .env.example  .gitignore  BLACK_SCREEN_PLAYBACK_FIX.md  BROWSER_RECORDING_FIX.md  CLIP_STITCHING_IMPLEMENTATION_SUMMARY.md  COMPLETE_SOLUTION_SUMMARY.md  COMPREHENSIVE_FIX_PLAN.md  CONTAINER_WIDTH_FIX.md  COOP_COEP_ISSUE_SOLUTION.md  CRITICAL_FIX_PERMISSIONS.md  CRITICAL_FIX_PLAN.md  DEBUG_DRAG_DROP.md  DEBUG_HEIGHTS.md  DEPLOYMENT_GUIDE.md  DESKTOP_RECORDING_SOLUTION.md  EXPORT_FEATURE_TEST_GUIDE.md  EXPORT_FIX_COMPLETE.md  FINAL_FIX_SUMMARY.md  FINAL_SOLUTION_SUMMARY.md  FIXED_SIZE_VIDEO_FIX.md  FIXES_IMPLEMENTED.md  FIX_PERMISSIONS_ERROR.md  FULLSCREEN_BLACK_SCREEN_FIX.md  GOOGLE_DRIVE_UPLOAD_GUIDE.md  IMPLEMENTATION_SUMMARY.md  MP4_CONVERSION_FIX.md  NATIVE_RECORDING_DIAGRAM.md  NATIVE_RECORDING_SETUP.md  NATIVE_RECORDING_SOLUTION.md  OVERFLOW_FIX.md  PERFORMANCE_FIX_INFINITE_RERENDER.md  PR3_TIMELINE_EDITOR_SUMMARY.md  PR4_SMOOTH_TIMELINE_TRANSITIONS_SUMMARY.md  PR5_EXPORT_PIPELINE.md  PR7_RELEASE_PACKAGING_DEPLOYMENT.md  QUICK_START_AFTER_FIX.md  README.md  README_NATIVE_RECORDING.md  README_START_HERE.md  RECORDING_MP4_FIX_COMPLETE.md  (+24 more)
.github/: PULL_REQUEST_TEMPLATE.md
public/: test-shared-array-buffer.html
scripts/: verify-test-env.sh
src/: App.css  App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cache.rs  config.rs  ffmpeg.rs  lib.rs  native_recorder.rs  recorder.rs
tests/: README.md  export_validation.md  manual_tests.md  memory_test.rs  performance_test_plan.md  (+1 more)
(+24 files in other folders)
